Add automated test that compares with theory (#79)
* add automated test that compares with theory

* minor cleaning

* eol at eof

* oops, forgot the bash file

* try to have yt on platforms

* clarify dependencies

* oops, typo

* constraint python version

* testing github workflow setup

* testing github workflow setup

* testing github workflow setup

* comment out some GitHub actions, as we are short in CI time

* testing github workflow setup

* testing github workflow setup

* testing github workflow setup

* testing github workflow setup

* make the CI test serial only

* have the parallel tests back on

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -172,22 +172,28 @@ if(BUILD_TESTING)
     enable_testing()
 
     if(NOT HiPACE_MPI)
-        add_test(NAME Main.Examples.Serial.Inputs
+        add_test(NAME can_beam.Serial
                  COMMAND $<TARGET_FILE:HiPACE> ${HiPACE_SOURCE_DIR}/examples/can_beam/inputs
+                 WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
+        )
+        add_test(NAME beam_in_vacuum.SI.Serial
+                 COMMAND ${HiPACE_SOURCE_DIR}/examples/beam_in_vacuum/run_test.sh $<TARGET_FILE:HiPACE> ${HiPACE_SOURCE_DIR}/examples/beam_in_vacuum
                  WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
         )
     else()
         configure_mpiexec(1)  # one rank in MPI_TEST_EXE
-        add_test(NAME Main.Examples.1Rank.Inputs
+
+        add_test(NAME can_beam.1Rank
                  COMMAND ${MPI_TEST_EXE} $<TARGET_FILE:HiPACE> ${HiPACE_SOURCE_DIR}/examples/can_beam/inputs
                  WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
         )
 
         configure_mpiexec(2)  # two ranks in MPI_TEST_EXE
-        add_test(NAME Main.Examples.2Ranks.Inputs
+        add_test(NAME can_beam.2Rank
                  COMMAND ${MPI_TEST_EXE} $<TARGET_FILE:HiPACE> ${HiPACE_SOURCE_DIR}/examples/can_beam/inputs
                  WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
         )
+
     endif()
 endif()
 
