don't activate test checking if input files are tested, not working yet

--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -29,5 +29,5 @@ jobs:
       run: .github/workflows/style/hasEOLwhiteSpace
     - name: Proper file names in Examples
       run: .github/workflows/style/wrongFileNameInExamples
-    - name: Examples are tested
-      run: .github/workflows/style/inputsNotTested
+#     - name: Examples are tested
+#       run: .github/workflows/style/inputsNotTested
