--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,7 +44,7 @@ if(NOT HiPACE_PRECISION IN_LIST HiPACE_PRECISION_VALUES)
 endif()
 
 set(HiPACE_COMPUTE_VALUES NOACC CUDA OMP DPCPP) # HIP
-set(HiPACE_COMPUTE OMP CACHE STRING
+set(HiPACE_COMPUTE NOACC CACHE STRING
     "On-node, accelerated computing backend (NOACC/OMP/CUDA/DPCPP)")
 set_property(CACHE HiPACE_COMPUTE PROPERTY STRINGS ${HiPACE_COMPUTE_VALUES})
 if(NOT HiPACE_COMPUTE IN_LIST HiPACE_COMPUTE_VALUES)
