--- a/.github/workflows/source.yml
+++ b/.github/workflows/source.yml
@@ -1,4 +1,4 @@
-# Copyright 2019-2020 Axel Huebl, Maxence Thevenet
+# Copyright 2020 Axel Huebl, Maxence Thevenet
 #
 # This file is part of Hipace.
 #
