Option: deposit beam particles in slice MF instead of 3d array

--- a/src/particles/CMakeLists.txt
+++ b/src/particles/CMakeLists.txt
@@ -4,6 +4,7 @@ target_sources(HiPACE
     BeamParticleContainerInit.cpp
     PlasmaParticleContainer.cpp
     PlasmaParticleContainerInit.cpp
+    BinSort.cpp
 )
 
 add_subdirectory(deposition)
