fix a bug (+1), clean up code, move cuFFT error handling to new file

--- a/src/fields/fft_poisson_solver/fft/CMakeLists.txt
+++ b/src/fields/fft_poisson_solver/fft/CMakeLists.txt
@@ -3,6 +3,7 @@ if (ENABLE_CUDA)
     PRIVATE
         WrapCuFFT.cpp
         WrapCuDST.cpp
+        CuFFTUtils.cpp
   )
 else()
   target_sources(HiPACE
