--- a/src/fields/fft_poisson_solver/CMakeLists.txt
+++ b/src/fields/fft_poisson_solver/CMakeLists.txt
@@ -1,6 +1,8 @@
 target_sources(HiPACE
   PRIVATE
     FFTPoissonSolver.cpp
+    FFTPoissonSolverPeriodic.cpp
+    FFTPoissonSolverDirichlet.cpp
 )
 
 add_subdirectory(fft)
