--- a/src/fields/fft_poisson_solver/fft/CMakeLists.txt
+++ b/src/fields/fft_poisson_solver/fft/CMakeLists.txt
@@ -2,10 +2,13 @@ if (ENABLE_CUDA)
   target_sources(HiPACE
     PRIVATE
         WrapCuFFT.cpp
+        WrapCuDST.cpp
+        CuFFTUtils.cpp
   )
 else()
   target_sources(HiPACE
     PRIVATE
         WrapFFTW.cpp
+        WrapDSTW.cpp
   )
 endif()
