add automated test for reset at the beginning of each timestep

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -205,6 +205,13 @@ if(BUILD_TESTING)
                  WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
         )
 
+        configure_mpiexec(1)  # one rank in MPI_TEST_EXE
+        add_test(NAME reset.1Rank
+                 COMMAND ${HiPACE_SOURCE_DIR}/tests/reset.1Rank.sh
+                         $<TARGET_FILE:HiPACE> ${HiPACE_SOURCE_DIR}
+                 WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
+        )
+
         # This test is temporarily removed, due to bugs in the parallelization
         # configure_mpiexec(2)  # two ranks in MPI_TEST_EXE
         # add_test(NAME can_beam.2Rank
