adding CI test for a blowout simulation, testing both SI and normalized units

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -192,6 +192,11 @@ if(BUILD_TESTING)
     else()
 
         configure_mpiexec(1)  # one rank in MPI_TEST_EXE
+        add_test(NAME blowout_wake.1Rank
+                 COMMAND ${HiPACE_SOURCE_DIR}/tests/blowout_wake.1Rank.sh
+                         $<TARGET_FILE:HiPACE> ${HiPACE_SOURCE_DIR}
+                 WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
+        )
         add_test(NAME can_beam.1Rank
                  COMMAND ${HiPACE_SOURCE_DIR}/tests/can_beam.1Rank.sh
                          $<TARGET_FILE:HiPACE> ${HiPACE_SOURCE_DIR}
