--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -173,8 +173,8 @@ if(BUILD_TESTING)
 
     if(NOT HiPACE_MPI)
 
-        add_test(NAME can_beam.Serial
-                 COMMAND ${HiPACE_SOURCE_DIR}/tests/can_beam.Serial.sh
+        add_test(NAME blowout_wake.Serial
+                 COMMAND ${HiPACE_SOURCE_DIR}/tests/blowout_wake.Serial.sh
                          $<TARGET_FILE:HiPACE> ${HiPACE_SOURCE_DIR}
                  WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
         )
@@ -194,11 +194,6 @@ if(BUILD_TESTING)
         configure_mpiexec(1)  # one rank in MPI_TEST_EXE
         add_test(NAME blowout_wake.1Rank
                  COMMAND ${HiPACE_SOURCE_DIR}/tests/blowout_wake.1Rank.sh
-                         $<TARGET_FILE:HiPACE> ${HiPACE_SOURCE_DIR}
-                 WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
-        )
-        add_test(NAME can_beam.1Rank
-                 COMMAND ${HiPACE_SOURCE_DIR}/tests/can_beam.1Rank.sh
                          $<TARGET_FILE:HiPACE> ${HiPACE_SOURCE_DIR}
                  WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
         )
