Adding CI test in the blowout regime and removing now redundant can_beam test (#174)
* adding CI test for a blowout simulation, testing both SI and normalized units

* moving all dependencies of reset and slice_deposition test from can_beam to blowout_wake

* removing can beam CI test

* minor cleaning

* improving analysis script, renaming remaining can_beam references

* changing the name of the plotfile for normalized units

* add a general plotting script

* fix typo

Co-authored-by: Maxence Thevenet <maxence.thevenet@desy.de>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -173,8 +173,8 @@ if(BUILD_TESTING)
 
     if(NOT HiPACE_MPI)
 
-        add_test(NAME can_beam.Serial
-                 COMMAND ${HiPACE_SOURCE_DIR}/tests/can_beam.Serial.sh
+        add_test(NAME blowout_wake.Serial
+                 COMMAND ${HiPACE_SOURCE_DIR}/tests/blowout_wake.Serial.sh
                          $<TARGET_FILE:HiPACE> ${HiPACE_SOURCE_DIR}
                  WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
         )
@@ -192,8 +192,8 @@ if(BUILD_TESTING)
     else()
 
         configure_mpiexec(1)  # one rank in MPI_TEST_EXE
-        add_test(NAME can_beam.1Rank
-                 COMMAND ${HiPACE_SOURCE_DIR}/tests/can_beam.1Rank.sh
+        add_test(NAME blowout_wake.1Rank
+                 COMMAND ${HiPACE_SOURCE_DIR}/tests/blowout_wake.1Rank.sh
                          $<TARGET_FILE:HiPACE> ${HiPACE_SOURCE_DIR}
                  WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
         )
@@ -224,8 +224,8 @@ if(BUILD_TESTING)
 
         # This test is temporarily removed, due to bugs in the parallelization
         # configure_mpiexec(2)  # two ranks in MPI_TEST_EXE
-        # add_test(NAME can_beam.2Rank
-        #         COMMAND ${HiPACE_SOURCE_DIR}/tests/can_beam.2Rank.sh
+        # add_test(NAME blowout_wake.2Rank
+        #         COMMAND ${HiPACE_SOURCE_DIR}/tests/blowout_wake.2Rank.sh
         #                 $<TARGET_FILE:HiPACE> ${HiPACE_SOURCE_DIR}
         #         WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
         #)
