--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -212,6 +212,18 @@ if(BUILD_TESTING)
                  WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
         )
 
+        add_test(NAME gaussian_linear_wake.normalized.1Rank
+                 COMMAND ${HiPACE_SOURCE_DIR}/tests/gaussian_linear_wake.normalized.1Rank.sh
+                         $<TARGET_FILE:HiPACE> ${HiPACE_SOURCE_DIR}
+                 WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
+        )
+
+        add_test(NAME gaussian_linear_wake.SI.1Rank
+                 COMMAND ${HiPACE_SOURCE_DIR}/tests/gaussian_linear_wake.SI.1Rank.sh
+                         $<TARGET_FILE:HiPACE> ${HiPACE_SOURCE_DIR}
+                 WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
+        )
+
         add_test(NAME slice_deposition.1Rank
                  COMMAND ${HiPACE_SOURCE_DIR}/tests/slice_deposition.1Rank.sh
                          $<TARGET_FILE:HiPACE> ${HiPACE_SOURCE_DIR}
