adding CI test for beam evolution

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -200,6 +200,12 @@ if(BUILD_TESTING)
                  WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
         )
 
+        add_test(NAME beam_evolution.1Rank
+                 COMMAND ${HiPACE_SOURCE_DIR}/tests/beam_evolution.1Rank.sh
+                         $<TARGET_FILE:HiPACE> ${HiPACE_SOURCE_DIR}
+                 WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
+        )
+
         add_test(NAME linear_wake.normalized.1Rank
                  COMMAND ${HiPACE_SOURCE_DIR}/tests/linear_wake.normalized.1Rank.sh
                          $<TARGET_FILE:HiPACE> ${HiPACE_SOURCE_DIR}
