CMake: New AMReX Options
Anticipate new AMReX options in CMake.

Also introduces a new environment hint, `AMReX_CUDA_ARCH`, that we
can use in `hipace.profile` files to default-optimize for CUDA
architectures. Currently, as well as without the hint, CMake will
try to find out local GPUs by running a small executable that queries
the device capabilities. If the login node has no GPUs or the run
does not succeed we fall back to potentially unoptimized default
architectures (6.0+).

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -89,6 +89,6 @@ jobs:
 #            -DCMAKE_C_COMPILER=$(which gcc-8)         \
 #            -DCMAKE_CXX_COMPILER=$(which g++-8)       \
 #            -DCMAKE_CUDA_HOST_COMPILER=$(which g++-8) \
-#            -DCUDA_ARCH=6.0
+#            -DAMReX_CUDA_ARCH=6.0
 #        make -j 2 VERBOSE=ON
 #        ctest --output-on-failure
