--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -239,8 +239,8 @@ if(BUILD_TESTING)
                  WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
         )
 
-        add_test(NAME slice_deposition.1Rank
-                 COMMAND ${HiPACE_SOURCE_DIR}/tests/slice_deposition.1Rank.sh
+        add_test(NAME slice_beam.1Rank
+                 COMMAND ${HiPACE_SOURCE_DIR}/tests/slice_beam.1Rank.sh
                          $<TARGET_FILE:HiPACE> ${HiPACE_SOURCE_DIR}
                  WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
         )
