create src/utils and move files in there

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,9 +2,8 @@ target_sources(HiPACE
   PRIVATE
     main.cpp
     Hipace.cpp
-    Constants.cpp
-    AdaptiveTimeStep.cpp
 )
 
 add_subdirectory(fields)
 add_subdirectory(particles)
+add_subdirectory(utils)
