add a multi beam container object

--- a/src/particles/CMakeLists.txt
+++ b/src/particles/CMakeLists.txt
@@ -5,6 +5,7 @@ target_sources(HiPACE
     PlasmaParticleContainer.cpp
     PlasmaParticleContainerInit.cpp
     BinSort.cpp
+    MultiBeam.cpp
 )
 
 add_subdirectory(deposition)
