only run CI on PR to development

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -1,6 +1,9 @@
 name: linux
 
-on: [pull_request]
+on:
+  pull_request:
+    branches:
+      - development
 
 jobs:
 # enable again when we open-source (free core-hours for GH Actions)
