--- a/src/particles/CMakeLists.txt
+++ b/src/particles/CMakeLists.txt
@@ -5,6 +5,7 @@ target_sources(HiPACE
     PlasmaParticleContainer.cpp
     PlasmaParticleContainerInit.cpp
     BinSort.cpp
+    BoxSort.cpp
     MultiBeam.cpp
 )
 
