re-enable 2 rank tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -209,11 +209,11 @@ if(BUILD_TESTING)
     else()
 
         configure_mpiexec(1)  # one rank in MPI_TEST_EXE
-        #add_test(NAME blowout_wake.2Rank
-        #         COMMAND ${HiPACE_SOURCE_DIR}/tests/blowout_wake.2Rank.sh
-        #                 $<TARGET_FILE:HiPACE> ${HiPACE_SOURCE_DIR}
-        #         WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
-        #)
+        add_test(NAME blowout_wake.2Rank
+                COMMAND ${HiPACE_SOURCE_DIR}/tests/blowout_wake.2Rank.sh
+                        $<TARGET_FILE:HiPACE> ${HiPACE_SOURCE_DIR}
+                WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
+        )
 
         add_test(NAME beam_evolution.1Rank
                  COMMAND ${HiPACE_SOURCE_DIR}/tests/beam_evolution.1Rank.sh
@@ -257,11 +257,11 @@ if(BUILD_TESTING)
                  WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
         )
 
-        #add_test(NAME reset.2Rank
-        #         COMMAND ${HiPACE_SOURCE_DIR}/tests/reset.2Rank.sh
-        #                 $<TARGET_FILE:HiPACE> ${HiPACE_SOURCE_DIR}
-        #         WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
-        #)
+        add_test(NAME reset.2Rank
+                 COMMAND ${HiPACE_SOURCE_DIR}/tests/reset.2Rank.sh
+                         $<TARGET_FILE:HiPACE> ${HiPACE_SOURCE_DIR}
+                 WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
+        )
 
         add_test(NAME beam_in_vacuum.SI.1Rank
                  COMMAND ${HiPACE_SOURCE_DIR}/tests/beam_in_vacuum.SI.1Rank.sh
@@ -287,11 +287,11 @@ if(BUILD_TESTING)
                  WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
         )
 
-        #add_test(NAME beam_in_vacuum.normalized.2Rank
-        #         COMMAND ${HiPACE_SOURCE_DIR}/tests/beam_in_vacuum.normalized.2Rank.sh
-        #                 $<TARGET_FILE:HiPACE> ${HiPACE_SOURCE_DIR}
-        #         WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
-        #)
+        add_test(NAME beam_in_vacuum.normalized.2Rank
+                 COMMAND ${HiPACE_SOURCE_DIR}/tests/beam_in_vacuum.normalized.2Rank.sh
+                         $<TARGET_FILE:HiPACE> ${HiPACE_SOURCE_DIR}
+                 WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
+        )
 
         # This test is temporarily removed, due to bugs in the parallelization
         # configure_mpiexec(2)  # two ranks in MPI_TEST_EXE
