fix logic in enforceBC and reactivate gaussian_weight.1Rank

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -281,13 +281,11 @@ if(BUILD_TESTING)
                  WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
         )
 
-        # Deactivate for now, as it segfaults in BoxSort because some particles are initialized
-        # outside of the domain.
-        #add_test(NAME gaussian_weight.1Rank
-        #         COMMAND ${HiPACE_SOURCE_DIR}/tests/gaussian_weight.1Rank.sh
-        #                 $<TARGET_FILE:HiPACE> ${HiPACE_SOURCE_DIR}
-        #         WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
-        #)
+        add_test(NAME gaussian_weight.1Rank
+                 COMMAND ${HiPACE_SOURCE_DIR}/tests/gaussian_weight.1Rank.sh
+                         $<TARGET_FILE:HiPACE> ${HiPACE_SOURCE_DIR}
+                 WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
+        )
 
         add_test(NAME beam_in_vacuum.normalized.2Rank
                  COMMAND ${HiPACE_SOURCE_DIR}/tests/beam_in_vacuum.normalized.2Rank.sh
